force-app/main/default/src/objects/PJN_Transaction_Log_Object__c/PJN_Transaction_Log_Object__c.object-meta.xml
<CustomObject>
    <description>Streamline error handling/logging for integrations.</description>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Transaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>