force-app/main/default/src/objects/PJN_Transaction_Log_Object__c/fields/PJN_Callout_Response__c.field-meta.xml
<CustomField>
    <fullName>PJN_Callout_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Callout Response</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>