force-app/main/default/src/objects/PJN_Transaction_Log_Object__c/fields/PJN_Level__c.field-meta.xml
<CustomField>
    <fullName>PJN_Level__c</fullName>
    <description>Transaction log level (debug, error)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Level</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>