force-app/main/default/src/objects/PJN_Transaction_Log_Object__c/fields/PJN_Message__c.field-meta.xml
<CustomField>
    <fullName>PJN_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>