force-app/main/default/src/objects/PJN_Transaction_Log_Object__c/fields/PJN_Running_User__c.field-meta.xml
<CustomField>
    <fullName>PJN_Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Running user once error occurred.</description>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PJN_Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>