force-app/main/default/src/objects/PJN_Transaction_Log_Object__c/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <description>Transaction log type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>