force-app/main/default/src/objects/PJN_Transaction_Log_Object__c/listViews/PJN_All.listView-meta.xml
<ListView>
    <fullName>PJN_All</fullName>
    <columns>NAME</columns>
    <columns>PJN_Level__c</columns>
    <columns>PJN_Type__c</columns>
    <columns>PJN_Running_User__c</columns>
    <columns>PJN_Callout_Request__c</columns>
    <columns>PJN_Callout_Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>